# snip20-reference-impl

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs
.cargo/: config  config.toml
.github/: dependabot.yml
.github/workflows/: Basic.yml  test.yml
examples/: schema.rs
schema/: handle_answer.json  handle_msg.json  init_msg.json  query_answer.json  query_msg.json
scripts/: admin.sh
src/: batch.rs  btbe.rs  config.rs  constants.rs  contract.rs  dwb.rs  execute.rs  execute_admin.rs  execute_deposit_redeem.rs  execute_mint_burn.rs  execute_transfer_send.rs  expiration.rs  gas_tracker.rs  lib.rs  msg.rs  notifications.rs  permit.rs  query.rs  rand.rs  receiver.rs  state.rs  stored_balances.rs  strings.rs  transaction_history.rs  utils.rs  viewing_key.rs  viewing_key_obj.rs
tests/: integration.rs  integration.sh
tests/dwb/: .env.example  .eslintrc.cjs  README.md  bun.lockb  eslint.config.mjs  package.json  tsconfig.json  tsconfig.tsc-esm-fix.json
tests/dwb/src/: constants.ts  contract.ts  dwb-entry.ts  dwb.ts  gas-checker.ts  helper.ts  main.ts  snip.ts
tests/example-receiver/: Cargo.toml  Makefile
tests/example-receiver/src/: contract.rs  lib.rs  msg.rs  state.rs
