[package]
name = "snip20-reference-impl"
version = "1.0.0"
authors = ["Itzik <itzik@keytango.io>"]
edition = "2021"
exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
#default = ["debug-print"]
backtraces = ["cosmwasm-std/backtraces"]

# debug-print = ["cosmwasm-std/debug-print"]
[dependencies]
cosmwasm-std = { git = "https://github.com/scrtlabs/cosmwasm/", default-features = false, tag = "v1.1.9-secret" }
cosmwasm-storage = { git = "https://github.com/scrtlabs/cosmwasm/", tag = "v1.1.9-secret" }
rand = { version = "0.8.5", default-features = false }
secret-toolkit = { git = "https://github.com/scrtlabs/secret-toolkit", features = [
  "permit",
  "viewing-key",
], rev = "9b74bdac71c2fedcc12246f18cdfdd94b8991282" }
secret-toolkit-crypto = { git = "https://github.com/scrtlabs/secret-toolkit", features = [
  "rand",
  "hash",
], rev = "9b74bdac71c2fedcc12246f18cdfdd94b8991282" }

schemars = "0.8.12"
serde = { version = "1.0.158", default-features = false, features = ["derive"] }
base64 = "0.21.0"

[dev-dependencies]
cosmwasm-schema = { version = "1.1.8" }
